
@startuml

skinparam backgroundColor #FEFEFE
skinparam wrapWidth 600
package "DMA_Common" #DDDDDD
{

class "CTreeItem"
{
}

}

package "DMA_GroupedView" #DDDDDD
{

class "CGroupedViewModel"
{
}

}

package "DMA_GroupedView_API" #DDDDDD
{

class "CGroupedViewComponent"
{
}

class "IGroupedViewModel"
{
    + {abstract} virtual int rowCount(const QModelIndex &parent = QModelIndex()) const = 0
    + {abstract} virtual std::pair<bool__QString> exportToHTML(QString& resultHTML) = 0
    + {abstract} virtual void addMatches( const tFoundMatches& matches, bool update ) = 0
    + {abstract} virtual void resetData() = 0
    + {abstract} virtual void setUsedRegex(const QString& regex) = 0
}

}

package "DMA_Settings_API" #DDDDDD
{

class "CSettingsManagerClient"
{
}

}

'====================Inheritance section====================
CSettingsManagerClient <|-- CGroupedViewModel : extends
IGroupedViewModel <|-- CGroupedViewModel : implements

'====================Dependencies section====================
CGroupedViewModel "1" *-- "*" CTreeItem : contains
CGroupedViewComponent "1" --> "1" CGroupedViewModel : using to create IGroupedViewModel

@enduml